# Python-Turbine-CLI

./: README.md  SKILL.md  pyproject.toml  reference.md
docs/: agent.md  human.md
src/netrise_turbine_cli/: __init__.py  cli.py  commands_api.py  completion.py  config.py  errors.py  fields.py  render.py  runtime.py
src/netrise_turbine_cli/_generated/: __init__.py  catalog.json  commands.py  coverage.json  schema.graphql
src/netrise_turbine_cli/_skill/turbine-cli/: SKILL.md
src/netrise_turbine_cli/_skill/turbine-cli/agents/: openai.yaml
src/netrise_turbine_cli/_skill/turbine-cli/references/: agent.md  reference.md
src/netrise_turbine_cli/commands/: __init__.py  _common.py  _registry.py  asset.py  auth.py  cert.py  component.py  credential.py  group.py  key.py  license.py  misconfig.py  notification.py  org.py  protection.py  report.py  search.py  secret.py  skill.py  user.py  vuln.py
tests/: _docs_manifest.py  test_cli.py  test_docs_contract.py
